cmake_minimum_required(VERSION 3.27)
project(untitled C)

set(CMAKE_C_STANDARD 17)
SET(CMAKE_BUILD_TYPE Debug)

add_executable(Assignment1-1 hw1-1.c)
add_executable(Assignment1-2 hw1-2.c)
add_executable(Assignment1-3 hw1-3.c)
add_executable(exercise2 exercise2.c)
add_executable(Assignment2-1 hw2-1.c)
add_executable(Assignment2-2 hw2-2.c)
add_executable(test test.c)
add_executable(hw3-1 hw3-1.c)
add_executable(hw3-2 hw3-2.c)
add_executable(hw3-3 hw3-3.c)